Thu May 10 04:19:13 BST 2007  Olly Betts <olly@survex.com>

	* common/safeunistd.h: Use Sleep() instead of _sleep() as the latter
	  gives deprecation warnings.  Sadly that means that safeunistd.h
	  now has to pull in safewindows.h.

Thu May 10 04:07:53 BST 2007  Olly Betts <olly@survex.com>

	* common/tcpserver.h,net/tcpserver.cc: Keep track of the mutex so
	  we can release it right after we close the listening socket.
	  Throw an error if we fail to get the mutex to avoid a possible
	  race condition (we might end up with the socket listening but
	  without the mutex locked).  Always call closesocket() on the
	  listening socket under __WIN32__ to ensure resources are released.

Thu May 10 02:48:31 BST 2007  Olly Betts <olly@survex.com>

	* net/tcpserver.cc: Use a mutex under Cygwin and WIN32 to allow use to
	  use Microsoft's broken SO_REUSEADDR on our listening socket, but
	  avoid being able to run two copies of xapian-tcpsrv on the same port
	  at once (tweaked patch from MarkH).
	* net/tcpserver.cc: Don't try to set SO_EXCLUSIVEADDRUSE if a previous
	  setsockopt() call failed as we might stomp on the error code.

Thu May 10 02:15:20 BST 2007  Olly Betts <olly@survex.com>

	* Makefile.am,bin/Makefile.mk,configure.ac,docs/Makefile.am,
	  examples/Makefile.mk: Add new Automake conditional
	  "MAINTAINER_NO_DOCS" to allow use to disable references to built
	  documentation in maintainer builds if --disable-documentation is
	  specified.  This allows Mark's buildbot to work without installing
	  so many tools, some of which aren't packaged for Cygwin.

Thu May 10 02:03:44 BST 2007  Olly Betts <olly@survex.com>

	* Makefile.am: Build rules for running generate-exceptions should be
	  controlled by MAINTAINER_MODE not DOCUMENTATION_RULES, part II.

Thu May 10 01:49:42 BST 2007  Olly Betts <olly@survex.com>

	* docs/deprecation.rst: Add Error::get_type().

Thu May 10 01:25:37 BST 2007  Olly Betts <olly@survex.com>
